Fix login contrast color for WCAG2AAA

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,8 @@
  *
  */
 // @see https://github.com/twbs/bootstrap/blob/master/scss/_variables.scss
-$blue:   #337ab7 !default;
+// $blue:   #337ab7 !default;
+$blue:   #145b98 !default;
 $red:    #DC493A !default;
 $yellow: #ffba08 !default;
 $orange: #f18f01 !default;
